--- a/web.config
+++ b/web.config
@@ -6,9 +6,10 @@
         <defaultDocument>
             <files>
                 <clear />
-                <add value="pages/samples/msal.html" />                
-                <add value="pages/samples/index2.html" />
+                <add value="pages/samples/msal2.html" />
                 <add value="pages/samples/index.html" />
+                <add value="pages/samples/msal.html" />
+                <add value="pages/samples/index2.html" />
                 <add value="pages/windApp/windApp.html" />
             </files>
         </defaultDocument>
